2000-08-11  J.T. Conklin  <jtc@redback.com>

	* dcache.c (dcache_info): Don't print cache state if last_cache 
	is NULL.

2000-08-10  Andrew Cagney  <cagney@ops1.cygnus.com>

	* config/mn10300/tm-mn10300.h, mn10300-tdep.c
 	(mn10300_push_arguments): Fix function signature to match gdbarch
 	vector.
	* config/mn10300/tm-mn10300.h (REGISTER_NAME): Delete.
	* mn10300-tdep.c (struct gdbarch_tdep): Define.
	(mn10300_generic_register_names, am33_register_names): Convert to
	functions.
	(set_machine_hook): Delete.
	(register_name): New function.
	(mn10300_register_name): Delete.
	(mn10300_dump_tdep, mn10300_gdbarch_init): New functions.
	(_initialize_mn10300_tdep): Call register_gdbarch_init instead of
	specify_exec_file_hook.
	(AM33_MODE): Define.
	(set_movm_offsets): Update.
	
2000-08-10  Mark Kettenis  <kettenis@gnu.org>

	Adapt support for SSE registers in Linux/x86 for Linux 2.4.
	* i386-linux-nat.c: Various doc fixes.  Include "i387-nat.h".
	(GETFPXREGS_SUPPLIES): Renamed from GETXFPREGS_SUPPLIES.
	(have_ptrace_getfpxregs): Renamed from have_ptrace_getxfpregs.
	(convert_to_gregset): Removed.  Moved logic to ...
	(fill_gregset): ... here.  Simplified function.
	(fetch_regs): Use perror_with_name for error reporting.
	(store_regs): Add `regno' parameter.  Use perror_with_name for
	error reporting.  Call fill_gregset instead of convert_to_gregset.
	(FPREG_ADDR): Remove.
	(supply_fpregset): Implement by calling i387_supply_fsave.
	(convert_to_fpregset): Remove.
	(fill_fpregset): Implement by calling i387_fill_fsave.
	(fetch_fpregs): Use perror_with_name fro error reporting.
	(store_fpregs) Add `regno' parameter.  Use perror_with_name fro
	error reporting.  Call fill_fpregset instead of
	convert_to_fpregset.
	(supply_xfpregset, convert_to_xfpregset): Removed.
	(supply_fpxregset, fill_fpxregset): New functions.
	(fetch_fpxregs): Renamed from fetch_xfpregs.  Use perror_with_name
	for error reporting.  Call supply_fpxregset instead of
	supply_xfpregset.